--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Header Section -->
     <header>
         <div class="container">
-            <h1>FreelanceConnect</h1>
+            <h1>LebWork</h1>
             <p>Connecting talents with the right opportunities</p>
         </div>
     </header>
