--- a/index.html
+++ b/index.html
@@ -10,48 +10,17 @@
     <!-- Header Section -->
     <header>
         <div class="container">
-            <h1>LebWork</h1>
-            <p>Connecting talents with the right opportunities</p>
+            <h1><color>RGB(3, 252, 161)</color>LebWork</h1>
+            <p><color>RGB(140, 252, 3)</color>Connecting talents with the right opportunities</p>
         </div>
     </header>
 
     <!-- Freelancer Submission Form Section -->
     <section class="form-section">
         <div class="container">
+            <h1>Looking to get hired?</h1>
             <h2>Submit Your Freelance Application</h2>
-            <form action="submit_form.php" method="POST">
-                <label for="name">Full Name:</label>
-                <input type="text" id="name" name="name" required>
-                
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-                
-                <label for="skills">Skills:</label>
-                <textarea id="skills" name="skills" rows="4" required></textarea>
-
-                <label for="portfolio">Portfolio/Website (optional):</label>
-                <input type="url" id="portfolio" name="portfolio">
-
-                <button type="submit">Submit</button>
-            </form>
-        </div>
-    </section>
-
-    <!-- Featured Jobs/Projects Section -->
-    <section class="projects-section">
-        <div class="container">
-            <h2>Featured Jobs & Projects</h2>
-            <div class="project-card">
-                <h3>Website Development</h3>
-                <p>Looking for a web developer to build an e-commerce site. Skills required: HTML, CSS, JavaScript.</p>
-                <button>Apply Now</button>
-            </div>
-
-            <div class="project-card">
-                <h3>Graphic Design</h3>
-                <p>Need a creative graphic designer for branding. Skills required: Adobe Illustrator, Photoshop.</p>
-                <button>Apply Now</button>
-            </div>
+           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdfLnAqGiwD_IOUi2V-tmgIlAqpkVzyK1QXeBHYgiNczgtbdw/viewform?embedded=true" width="400" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </div>
     </section>
 </body>
