--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <!-- Header Section -->
     <header>
         <div class="container">
-            <h1><color>RGB(3, 252, 161)</color>LebWork</h1>
-            <p><color>RGB(140, 252, 3)</color>Connecting talents with the right opportunities</p>
+            <h1><center>Welcome to LebWork</center></h1>
+            <p>Connecting talents with the right opportunities</p>
         </div>
     </header>
 
     <!-- Freelancer Submission Form Section -->
     <section class="form-section">
         <div class="container">
-            <h1>Looking to get hired?</h1>
-            <h2>Submit Your Freelance Application</h2>
+            <h1><center>Looking to get hired?</center></h1>
+            <h2><center>Submit your Freelance Application and find someone that will pay you handsomely for your work!</center>Submit Your Freelance Application</h2>
            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdfLnAqGiwD_IOUi2V-tmgIlAqpkVzyK1QXeBHYgiNczgtbdw/viewform?embedded=true" width="400" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </div>
     </section>
