--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <header>
         <div class="container">
             <h1><center>Welcome to LebWork</center></h1>
-            <p>Connecting talents with the right opportunities</p>
+            <h2><center>Connecting talents with the right opportunities</center></h2>
         </div>
     </header>
 
-    <!-- Freelancer Submission Form Section -->
+    <!-- Freelancer Submission Form Sectione -->
     <section class="form-section">
         <div class="container">
             <h1><center>Looking to get hired?</center></h1>
-            <h2><center>Submit your Freelance Application and find someone that will pay you handsomely for your work!</center>Submit Your Freelance Application</h2>
+            <h2>Submit your Freelance Application and find someone that will pay you handsomely for your work!</h2>
            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdfLnAqGiwD_IOUi2V-tmgIlAqpkVzyK1QXeBHYgiNczgtbdw/viewform?embedded=true" width="400" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </div>
     </section>
