--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="container">
             <h1><center>Welcome to LebWork</center></h1>
             <h2><center>Connecting talents with the right opportunities</center></h2>
+            <h3><center>-------------------------------------------------------------------------------------------</center></h3>
         </div>
     </header>
 
