--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="form-section">
         <div class="container">
             <h1><center>Looking to get hired?</center></h1>
-            <h2>Submit your Freelance Application and find someone that will pay you handsomely for your work!</h2>
+            <h2><center>Submit your Freelance Application and find someone that will pay you handsomely for your work!</center></h2>
           <center><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdfLnAqGiwD_IOUi2V-tmgIlAqpkVzyK1QXeBHYgiNczgtbdw/viewform?embedded=true" width="400" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
              </div></center> 
     </section>
