--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
             <h2><center>Submit your Freelance Application and find someone that will pay you handsomely for your work!</center></h2>
           <center><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdfLnAqGiwD_IOUi2V-tmgIlAqpkVzyK1QXeBHYgiNczgtbdw/viewform?embedded=true" width="400" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
              </div></center> 
+        <!-- Freelance Finder Form Section -->
+         <h3><center>-------------------------------------------------------------------------------------------</center></h3>
+         <section class="form-section">
+        <div class="container">
+            <h1><center>Looking for people to hire?</center></h1>
+            <h2><center>Submit what you're looking for and we will find someone that matches all your needs almost instantely!</center></h2>
+          <center><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdDCe29aH8Goww5Ut4JQVXRthJkkyPP0t63oCOrklHf-tWvEA/viewform?embedded=true" width="400" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+             </div></center> 
+        
     </section>
 </body>
 </html>
