--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <!-- Header Section -->
     <header>
         <h1>Welcome to LebWork</h1>
+        <img src="LebWork.png" width="500" height="333">
         <h2>Connecting talents with the right opportunities</h2>
         <hr>
     </header>
