--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Header Section -->
     <header>
         <h1>Welcome to LebWork</h1>
-        <img src="Leb Work.png" width="500" height="333">
+        <center><img src="Leb Work.png" width="500" height="333"></center>
         <h2>Connecting talents with the right opportunities</h2>
         <hr>
     </header>
