--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
         <h1>Looking for people to hire?</h1>
         <h2>Submit your requirements</h2>
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdDCe29aH8Goww5Ut4JQVXRthJkkyPP0t63oCOrklHf-tWvEA/viewform?embedded=true" width="400" height="600" frameborder="0">Loading…</iframe>
+
+    <!-- Other Links Section -->
+        <h1><center>Other links:</center></h1>
+        <a href="https://les-news.github.io/About-Me/" target="_blank">Visit the creator's official website!</a>
     </section>
 </body>
 </html>
