--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LebWork</title>
+    <title>LebTutor</title>
     <style>
         body {
             background-color: #f0f0f0;
@@ -34,7 +34,7 @@
 <body>
     <!-- Header Section -->
     <header>
-        <h1>Welcome to LebWork</h1>
+        <h1>Welcome to LebTutor</h1>
         <center><img src="Leb Work.png" width="500" height="333"></center>
         <h2>Connecting talents with the right opportunities</h2>
         <hr>
@@ -42,8 +42,8 @@
 
     <!-- Freelancer Submission Form Section -->
     <section class="form-section">
-        <h1>Looking to get hired?</h1>
-        <h2>Submit your Freelance Application</h2>
+        <h1>Looking to tutor?</h1>
+        <h2>Submit your application</h2>
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdfLnAqGiwD_IOUi2V-tmgIlAqpkVzyK1QXeBHYgiNczgtbdw/viewform?embedded=true" width="400" height="600" frameborder="0">Loading…</iframe>
     </section>
 
@@ -51,13 +51,17 @@
 
     <!-- Freelance Finder Form Section -->
     <section class="form-section">
-        <h1>Looking for people to hire?</h1>
+        <h1>Looking for tutors?</h1>
         <h2>Submit your requirements</h2>
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdDCe29aH8Goww5Ut4JQVXRthJkkyPP0t63oCOrklHf-tWvEA/viewform?embedded=true" width="400" height="600" frameborder="0">Loading…</iframe>
 
     <!-- Other Links Section -->
         <h1><center>Other links:</center></h1>
         <a href="https://les-news.github.io/About-Me/" target="_blank">Visit the creator's official website!</a>
+
+    <!-- About this website -->
+        <h1><center>All about this website:</center></h1>
+        <h2>This website was made by <a href="https://les-news.github.io/About-Me/" target="_blank">William Aktaa</a></h2> to solve the problem being the long process of finding a tutor</h2>
     </section>
 </body>
 </html>
