--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <!-- About this website -->
         <h1><center>All about this website:</center></h1>
-        <h2>This website was made by <a href="https://les-news.github.io/About-Me/" target="_blank">William Aktaa</a></h2> to solve the problem being the long process of finding a tutor. By submitting a form, you are aware and must comply to giving the creator 10% of all money earned.</h2>
+        <h2>This website was made by <a href="https://les-news.github.io/About-Me/" target="_blank">William Aktaa</a></h2> to solve the problem being the long process of finding a tutor. By submitting a form, you are aware and must comply to giving the creator 10% of the total you earned.</h2>
     </section>
 </body>
 </html>
