--- a/index.html
+++ b/index.html
@@ -17,16 +17,27 @@
             text-align: center;
             padding: 20px 0;
         }
-        header h1 {
+        header h1, header h2 {
             margin: 0;
-        }
-        header h2 {
-            margin: 5px 0;
         }
         img {
             max-width: 100%;
             height: auto;
             border-radius: 8px;
+        }
+        nav {
+            background-color: #0056b3;
+            padding: 10px;
+            text-align: center;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 15px;
+            font-weight: bold;
+        }
+        nav a:hover {
+            text-decoration: underline;
         }
         .form-section {
             margin: 20px auto;
@@ -66,34 +77,69 @@
             bottom: 0;
             width: 100%;
         }
+        .tutors-list {
+            margin: 20px auto;
+            padding: 20px;
+            background-color: white;
+            border-radius: 8px;
+            width: 90%;
+            max-width: 800px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
+        .tutors-list ul {
+            list-style: none;
+            padding: 0;
+        }
+        .tutors-list li {
+            margin-bottom: 10px;
+            padding: 10px;
+            background-color: #f9f9f9;
+            border-radius: 8px;
+            border: 1px solid #ddd;
+        }
     </style>
 </head>
 <body>
+    <!-- Navigation Bar -->
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#tutors">Tutors Available</a>
+        <a href="#apply-tutor">Apply to Tutor</a>
+        <a href="#find-tutor">Find a Tutor</a>
+        <a href="#about">About</a>
+    </nav>
+
     <!-- Header Section -->
-    <header>
+    <header id="home">
         <h1>Welcome to LebTutor</h1>
         <img src="Leb Work (1).png" alt="LebTutor Logo">
         <h2>Connecting talents with the right opportunities</h2>
     </header>
 
-    <!-- Freelancer Submission Form Section -->
-    <section class="form-section">
+    <!-- Tutor Submission Form Section -->
+    <section class="form-section" id="apply-tutor">
         <h1>Looking to tutor?</h1>
         <h2>Submit your application</h2>
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdfLnAqGiwD_IOUi2V-tmgIlAqpkVzyK1QXeBHYgiNczgtbdw/viewform?embedded=true" frameborder="0">Loading…</iframe>
     </section>
 
     <!-- Freelance Finder Form Section -->
-    <section class="form-section">
+    <section class="form-section" id="find-tutor">
         <h1>Looking for tutors?</h1>
         <h2>Submit your requirements</h2>
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdDCe29aH8Goww5Ut4JQVXRthJkkyPP0t63oCOrklHf-tWvEA/viewform?embedded=true" frameborder="0">Loading…</iframe>
     </section>
 
-    <!-- Other Links Section -->
-    <section class="form-section">
-        <h1>Other links:</h1>
-        <p><a href="https://les-news.github.io/About-Me/" target="_blank">Visit the creator's official website!</a></p>
+    <!-- Tutors Available Section -->
+    <section class="tutors-list" id="tutors">
+        <h1>Tutors Available:</h1>
+        <ul>
+             <P>No tutors available, be the first!</P>
+        </ul>
+    </section>
+
+    <!-- About Section -->
+    <section class="form-section" id="about">
         <h1>All about this website:</h1>
         <h2>This website was created by <a href="https://les-news.github.io/About-Me/" target="_blank">William Aktaa</a> to simplify finding a tutor. By submitting a form, you agree to give the creator 10% of the total amount earned.</h2>
     </section>
