--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
             background-color: #f7f9fc;
             font-family: Arial, sans-serif;
             margin: 0;
-            padding: 0;
+            padding: 0 0 50px 0; /* Padding added to the bottom */
         }
         header {
-            color: #444;
+            background-color: #4CAF50; /* Changed to a more visually appealing color */
+            color: white;
             text-align: center;
             padding: 30px 0;
-            background-color: #0056b3;
-            color: white;
         }
         header h1 {
             margin: 0;
@@ -29,7 +28,7 @@
             font-size: 1.5em;
         }
         nav {
-            background-color: #003366;
+            background-color: #333; /* Darker shade for better contrast */
             padding: 10px;
             text-align: center;
         }
@@ -43,10 +42,10 @@
             transition: background-color 0.3s;
         }
         nav a:hover {
-            background-color: #336699;
+            background-color: #575757; /* Subtle hover effect */
         }
         .form-section, .tutors-list, .students-list {
-            margin: 30px auto;
+            margin: 30px auto 80px auto; /* Adds margin to the bottom */
             padding: 20px;
             background-color: #ffffff;
             border-radius: 8px;
@@ -74,6 +73,7 @@
             position: fixed;
             bottom: 0;
             width: 100%;
+            height: 50px; /* Fixed height */
         }
     </style>
 </head>
