--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" href="Leb Work (1).png" type="image/png">
+    <link rel="icon" href="Leb.png" type="image/png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="LebTutor connects students with tutors in Lebanon. Find a tutor or become one and earn while helping others succeed.">
@@ -92,7 +92,7 @@
     <header id="home">
         <h1>Welcome to LebTutor</h1>
         <h2>Connecting talents with the right opportunities</h2>
-        <img src="Leb Work (1).png" alt="LebTutor Logo">
+        <img src="Leb.png" alt="LebTutor Logo">
     </header>
 
     <!-- Tutor Submission Form Section -->
