--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>LebTutor</title>
     <style>
         body {
-            background-color: #f0f0f0;
+            background-color: #f0f0f0; /* Light gray background for the entire page */
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
@@ -16,6 +16,7 @@
             color: #333;
             text-align: center;
             padding: 20px 0;
+            background-color: #ffffff; /* White background for header */
         }
         header h1, header h2 {
             margin: 0;
@@ -26,12 +27,13 @@
             border-radius: 8px;
         }
         nav {
-            background-color: #ffffff; /* White background */
+            background-color: #ffffff; /* White background for nav bar */
             padding: 10px;
             text-align: center;
+            border-bottom: 2px solid #0056b3; /* Optional: Add a bottom border to separate the nav from the rest of the content */
         }
         nav a {
-            color: #333; /* Darker text color for visibility */
+            color: #0056b3; /* Change text color to blue */
             text-decoration: none;
             margin: 0 15px;
             font-weight: bold;
@@ -69,12 +71,11 @@
             text-decoration: underline;
         }
         footer {
-            background-color: #ffffff; /* White background */
-            color: #333; /* Darker text color for visibility */
+            background-color: #0056b3;
+            color: white;
             text-align: center;
             padding: 10px 0;
-            position: fixed;
-            bottom: 0;
+            position: relative; /* Change from fixed to relative */
             width: 100%;
         }
         .tutors-list ul, .students-list ul {
@@ -88,6 +89,30 @@
             border-radius: 8px;
             border: 1px solid #ddd;
         }
+        .search-container {
+            text-align: center;
+            margin: 20px 0;
+        }
+        .search-container input[type="text"] {
+            padding: 10px;
+            width: 60%;
+            max-width: 500px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .search-container button {
+            padding: 10px 20px;
+            background-color: #0056b3;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .search-container button:hover {
+            background-color: #004494;
+        }
     </style>
 </head>
 <body>
@@ -98,6 +123,8 @@
         <a href="#students">Students Available</a>
         <a href="#apply-tutor">Apply to Tutor</a>
         <a href="#find-tutor">Find a Tutor</a>
+        <a href="#blog">Blog</a>
+        <a href="#contact">Contact</a>
         <a href="#about">About</a>
     </nav>
 
@@ -107,6 +134,12 @@
         <img src="Leb Work (1).png" alt="LebTutor Logo">
         <h2>Connecting talents with the right opportunities</h2>
     </header>
+
+    <!-- Search Functionality Section -->
+    <div class="search-container">
+        <input type="text" id="search-input" placeholder="Search tutors by name or subject...">
+        <button onclick="searchTutors()">Search</button>
+    </div>
 
     <!-- Tutor Submission Form Section -->
     <section class="form-section" id="apply-tutor">
@@ -125,8 +158,8 @@
     <!-- Tutors Available Section -->
     <section class="tutors-list" id="tutors">
         <h1>Tutors Available:</h1>
-        <ul>
-            <p>No tutors available, Why not be the first?</p>
+        <ul id="tutor-list">
+            <p>No tutors available, why not be the first?</p>
         </ul>
     </section>
 
@@ -138,15 +171,40 @@
         </ul>
     </section>
 
+    <!-- Blog Section -->
+    <section class="form-section" id="blog">
+        <h1>Blog</h1>
+        <h2>Latest Articles</h2>
+        <ul>
+            <li><a href="#">How to become a successful tutor</a></li>
+            <li><a href="#">Top 5 subjects in demand</a></li>
+        </ul>
+    </section>
+
     <!-- About Section -->
     <section class="form-section" id="about">
-        <h1>All about this website:</h1>
-        <h2>This website was created by <a href="https://les-news.github.io/About-Me/" target="_blank">William Aktaa</a> to simplify finding a tutor. By submitting a form, you agree to give the creator 30% of the total amount earned as a percentage of your earnings to support our community growth. Learn more about the creator.</h2>
+        <h1>About LebTutor</h1>
+        <h2>This website was created by <a href="https://les-news.github.io/About-Me/" target="_blank">William Aktaa</a> to simplify finding a tutor. By submitting a form, you agree to give the creator a small percentage of your earnings to support our community growth. Learn more about the creator.</h2>
     </section>
     
-    <!-- Footer -->
     <footer>
-        <p>&copy; 2024 LebTutor. All rights reserved.</p>
+        &copy; 2024 LebTutor - Connecting talents with opportunities
     </footer>
+
+    <script>
+        // Example search function
+        function searchTutors() {
+            const searchInput = document.getElementById('search-input').value.toLowerCase();
+            const tutorList = document.getElementById('tutor-list');
+            const tutors = tutorList.getElementsByTagName('li');
+
+            for (let i = 0; i < tutors.length; i++) {
+                const tutor = tutors[i];
+                const text = tutor.textContent.toLowerCase();
+                tutor.style.display = text.includes(searchInput) ? '' : 'none';
+            }
+        }
+    </script>
 </body>
 </html>
+
