--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <!-- About Section -->
     <section class="form-section" id="about">
         <h1>About LebTutor</h1>
-        <h2>This website was created by <a href="https://les-news.github.io/About-Me/" target="_blank">William Aktaa</a> to simplify finding a tutor. By submitting a form, you agree to give the creator a small percentage of your earnings to support our community growth. Learn more about the creator.</h2>
+        <h2>This website was created by <a href="https://les-news.github.io/About-Me/" target="_blank">William Aktaa</a> to simplify finding a tutor. By submitting a form, you agree to give the creator a small percentage of your earnings to support our community growth.</h2>
     </section>
     
     <footer>
