--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
         <h1>Blog</h1>
         <h2>Latest Articles</h2>
         <ul
+            <li><a href=" https://les-news.github.io/Article/">How to become the best student this year</a></li>
         </ul>
     </section>
 
